Add Donate links where appropriate, add language handling

--- a/help.html
+++ b/help.html
@@ -130,6 +130,7 @@
 <p>Media Player Classic - Home Cinema (MPC-HC) is a lightweight media player with support for a variety of audio and video formats. <a href="http://mpc-hc.sourceforge.net/">Learn more about MPC-HC...</a></p>
 
 <p><a href="http://portableapps.com/donate"><img src="Other/Help/Images/Donation_Button.png" style="vertical-align:middle" alt="Make a Donation"></a> - Support PortableApps.com's Hosting and Development</p>
+<p><a href="https://mpc-hc.org/donate/"><img src="Other/Help/Images/Donation_Button.png" style="vertical-align:middle" alt="Make a Donation"></a> - Support MPC-HC's Development</p>
 
 <p><a href="http://portableapps.com/apps/music_video/mpc-hc-portable">Go to the Media Player Classic - Home Cinema (MPC-HC) Portable Homepage &gt;&gt;</a></p>
 <p><a href="http://portableapps.com/">Get more portable apps at PortableApps.com</a></p>
